# gnn-neurobenzene

./: .gitignore  CMakeLists.txt  README.md
share/nn/: model.pt
src/: CMakeLists.txt
src/commonengine/: CommonHtpEngine.cpp
src/mohex/: CMakeLists.txt  MoHexEngine.cpp  MoHexPriorKnowledge.cpp
src/neuralnet/: CMakeLists.txt  NeuroEvaluate.cpp  NeuroEvaluate.hpp
tensorflow_c_cpu/: test_hello
tools/lg/: lg-mohex.rb
